--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,1 +1,16 @@
-<h1>Hello World</h1>
+<!DOCTYPE html>
+
+<html xmlns:th="http://www.thymeleaf.org">
+
+<head>
+    <title>Coronavirus Tracking Application</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+</head>
+
+<body>
+
+<p th:text="${TestString}"></p>
+
+</body>
+
+</html>
