Passed locationStats to thymeleaf templating engine.

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,7 +9,18 @@
 
 <body>
 
-<p th:text="${TestString}"></p>
+<table>
+    <tr>
+        <th>State</th>
+        <th>Country</th>
+        <th>Confirmed Cases</th>
+    </tr>
+    <tr th:each="locationStat : ${locationStats}">
+        <td th:text="${locationStat.state}"></td>
+        <td th:text="${locationStat.country}"></td>
+        <td th:text="${locationStat.confirmedCases}">yes</td>
+    </tr>
+</table>
 
 </body>
 
