Total Reported Cases calculated.

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,6 +9,11 @@
 
 <body>
 
+<div class="container-fluid py-5">
+    <h1 class="display-5 fw-bold" th:text="${totalReportedCases}"></h1>
+    <p class="col-md-8 fs-4">Coronavirus Total Reported Cases</p>
+</div>
+
 <table>
     <tr>
         <th>State</th>
